Bug 225848 - Expand/Collapse To:/Cc: headers broken
Summary: Expand/Collapse To:/Cc: headers broken
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks:
 
Reported: 2010-02-07 18:26 UTC by Torgny Nyblom
Modified: 2010-02-11 13:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Torgny Nyblom 2010-02-07 18:26:58 UTC
The feature where the To: and Cc: fields would collapse/expand when many addresses where present is broken
Comment 1 Torgny Nyblom 2010-02-11 13:05:20 UTC
SVN commit 1088700 by tnyblom:

Fix expandable/collapsable To:/Cc: fields.
Seems this was missed/forgotten when extracting messageviewer from kmail.

BUG: 225848


 M  +28 -12    messagecore/stringutil.cpp  
 M  +44 -8     messagecore/stringutil.h  
 M  +25 -19    messageviewer/headerstyle.cpp  
 M  +6 -0      messageviewer/messageviewer.kcfg  
 M  +36 -0     messageviewer/urlhandlermanager.cpp  
 M  +72 -0     messageviewer/viewer_p.cpp  
 M  +20 -0     messageviewer/viewer_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1088700