Fix expandable/collapsable To:/Cc: fields. Seems this was missed/forgotten when extracting messageviewer from kmail.

BUG: 225848

svn path=/trunk/KDE/kdepim/messagecore/; revision=1088700